refactor(event): 重构事件脚本调度器以支持更详细的错误追踪
- 将计划任务存储结构从 <Runnable, Long> 修改为 <Runnable, ScheduledEvent> 以存储更多上下文信息
- 新增 ScheduledEvent 内部类封装任务动作、执行时间、脚本路径和事件名称
- 在异常处理中捕获 Throwable 类型以包括内存溢出等严重错误
- 为脚本异常添加行号信息并增强错误日志输出
- 在注册计划任务时传入脚本路径和事件名称参数用于日志记录
- 使用 EventManager 中的准确脚本路径替代硬编码路径
- 更新集合操作方法如 removeFirst() 和 getFirst() 替代旧式方法
- 添加 Lombok 注解简化代码并优化服务属性注入方式